--- a/Leaflet-Step-1/index.html
+++ b/Leaflet-Step-1/index.html
@@ -18,8 +18,16 @@
 
 <body>
 
-  <!-- The div that holds our map -->
-  <div id="mapid"></div>
+  <div class="container">
+    <br>
+    <h1 style="text-align:center">Earthquake Detections</h1>
+    <h3 style="text-align:center">Past 30 days</h3>
+    <br>
+    <div id="mapcontainer">
+      <!-- The div that holds our map -->
+      <div id="mapid"></div>
+    </div>
+  </div>
 
   <!-- D3 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
