Center legend title text

--- a/Leaflet-Step-1/index.html
+++ b/Leaflet-Step-1/index.html
@@ -20,8 +20,8 @@
 
   <div class="container">
     <br>
-    <h1 style="text-align:center">Earthquake Detections</h1>
-    <h3 style="text-align:center">Past 30 days</h3>
+    <h1 class="center">Earthquake Detections</h1>
+    <h3 class="center">Past 30 days</h3>
     <br>
     <div id="mapcontainer">
       <!-- The div that holds our map -->
